--- a/apps/auth/Gemfile
+++ b/apps/auth/Gemfile
@@ -8,6 +8,7 @@ gem "doorkeeper"
 gem 'waterdrop'
 gem 'dry-struct'
 gem 'dry-monads'
+gem 'activeadmin'
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.6"
@@ -49,7 +50,7 @@ gem "tzinfo-data", platforms: %i[mingw mswin x64_mingw jruby]
 gem "bootsnap", require: false
 
 # Use Sass to process CSS
-# gem "sassc-rails"
+gem "sassc-rails"
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
