Setup auth engine, integrate it with task_tracker, add tailwind to auth service

--- a/apps/auth/Gemfile
+++ b/apps/auth/Gemfile
@@ -9,6 +9,7 @@ gem 'waterdrop'
 gem 'dry-struct'
 gem 'dry-monads'
 gem 'activeadmin'
+gem "tailwindcss-rails"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.6"
