--- a/apps/task_tracker/.gitignore
+++ b/apps/task_tracker/.gitignore
@@ -33,3 +33,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# iOS trash
+.DS_Store
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
