integrate task_trackerwith kafka, handle UserCreated, move events to a separate component

--- a/apps/auth/Gemfile
+++ b/apps/auth/Gemfile
@@ -5,11 +5,10 @@ ruby "3.2.2"
 
 gem "devise"
 gem "doorkeeper"
-gem 'waterdrop'
-gem 'dry-struct'
 gem 'dry-monads'
 gem 'activeadmin'
 gem "tailwindcss-rails"
+gem "events", path: "../../components/events"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.6"
