--- a/apps/task_tracker/Gemfile
+++ b/apps/task_tracker/Gemfile
@@ -7,7 +7,9 @@ gem "auth", path: "../../components/auth"
 gem "events", path: "../../components/events"
 gem "karafka"
 gem "dry-monads"
+gem "pry-rails"
 
+# Default rails stuff
 gem "rails", "~> 7.0.6"
 gem "sprockets-rails"
 gem "pg", "~> 1.1"
@@ -32,7 +34,6 @@ end
 
 group :development do
   gem "web-console"
-  gem "pry-rails"
   # gem "rack-mini-profiler"
   # gem "spring"
 end
