--- a/apps/accounting/config/database.yml
+++ b/apps/accounting/config/database.yml
@@ -1,6 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: 0.0.0.0
+  port: 5433
+  username: postgres
+  password: postgres
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -14,5 +18,5 @@ test:
 production:
   <<: *default
   database: accounting_production
-  username: accounting
+  username: <%= ENV["ACCOUNTING_DATABASE_USERNAME"] %>
   password: <%= ENV["ACCOUNTING_DATABASE_PASSWORD"] %>
